--- a/RazorPagesFilme/appsettings.json
+++ b/RazorPagesFilme/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RazorPagesFilmeContext": "Server=192.168.15.43,1433;Database=teste;User Id=sa;PASSWORD=VeryStr0ngP@ssw0rd;TrustServerCertificate=True"
+    "RazorPagesFilmeContext": "Server=localhost,1433;Database=teste;User Id=sa;PASSWORD=VeryStr0ngP@ssw0rd;TrustServerCertificate=True"
   }
 }
